objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Customer_Code__c</fullName>
        <formula>IF(ISPICKVAL(Account.Type, &quot;Internal&quot;), null, Account.IAM_Service_Provider_Code__c)</formula>
        <label>Location Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Dealer_Code__c</fullName>
        <formula>IF(ISPICKVAL(Account.Type, &quot;Internal&quot;), null, Account.CSS_DealerCode__c)</formula>
        <label>Location Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Dist_Br_Code__c</fullName>
        <formula>IF(ISPICKVAL(Account.Type, &quot;Internal&quot;), null, Account.CSS_DBCode__c)</formula>
        <label>Location Dist. Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Dist_Code__c</fullName>
        <formula>IF(ISPICKVAL(Account.Type, &quot;Internal&quot;), null, Account.CSS_DistributorCode__c)</formula>
        <label>Location Distributor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended_Dreamforce__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;
CASE( Dreamforce__c, 
&quot;yes&quot;, &quot;Image ID&quot;, 
&quot;No&quot;, &quot;Image ID&quot;
, &quot;&quot;),&quot;Image Not Available...&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attended Dreamforce</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_work_started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Work Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMI_Dummy_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to show that Primary contact email came from the API is  Dummy email and should not be used for any communication purpose from the salesforce side.</description>
        <label>Dummy Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_Flagged_E_mail_Address__c</fullName>
        <label>Flagged E-mail Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMI_TableauId__c</fullName>
        <displayFormat>tabuser{0}</displayFormat>
        <label>TableauId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CMI_User_Id__c</fullName>
        <description>This field is to store the user Id of each contact and user that is coming from the API from PC</description>
        <label>User Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_User_not_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User not Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSTS_Secondary_Email__c</fullName>
        <description>CSTS:Created to track additional email address</description>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Comm_Lang_Pref_Code__c</fullName>
        <label>Comm Lang Pref Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_User_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created User Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_ABO__c</fullName>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dreamforce__c</fullName>
        <label>Dreamforce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Customer_Code__c</fullName>
        <formula>Account.FSL_ERP_Customer_Code__c</formula>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecom_Email_Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Subscriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Notification_Frequency__c</fullName>
        <label>Email Notification Frequency​</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Real-Time</fullName>
                </value>
                <value>
                    <fullName>Nightly</fullName>
                </value>
                <value>
                    <fullName>Never/Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equipment Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Comm_Triggers__c</fullName>
        <description>Contact&apos;s preferred communications</description>
        <label>Communication Triggers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment Available</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting Started</fullName>
                </value>
                <value>
                    <fullName>Authorized Work Started</fullName>
                </value>
                <value>
                    <fullName>Service Work Completed</fullName>
                </value>
                <value>
                    <fullName>Invoice Ready</fullName>
                </value>
                <value>
                    <fullName>Equipment Ready For Pick Up</fullName>
                </value>
                <value>
                    <fullName>Service Work Proceeding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>Contact Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_ABO_Code__c</fullName>
        <formula>Account.IAM_ABO_Code_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Account_Type__c</fullName>
        <formula>Account.IAM_Internal_Account__c</formula>
        <label>Internal Account Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Activated_On__c</fullName>
        <description>This is field is used to know when and at what time user got activated and is for Auditing purpose</description>
        <label>Activated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IAM_Agreement_Signed_By__c</fullName>
        <label>IAM Agreement Signed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Agreement_Signed_On__c</fullName>
        <label>IAM Agreement Signed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IAM_AppId__c</fullName>
        <description>Field to Capture Application ID when user is trying to register</description>
        <label>IAM AppId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Application_Roles__c</fullName>
        <label>Application Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Applications__c</fullName>
        <description>this field is used to store the default access of all the applications that user gets before creating a user.because of different approval levels.</description>
        <label>Application Groups</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_Approved__c</fullName>
        <description>This is for IDM purpose to check if contact is approved or not. dpending upon this approval process will gets activavted</description>
        <label>Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Approver_URL__c</fullName>
        <formula>$Label.IAM_Adminlogin_Link</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_BMS_Instance__c</fullName>
        <description>This field is use High Radius</description>
        <label>BMS Instance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>One BMS</fullName>
                </value>
                <value>
                    <fullName>BMS CAD</fullName>
                </value>
                <value>
                    <fullName>BMS SPL</fullName>
                </value>
                <value>
                    <fullName>BMS CRB</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                    <isActive>false</isActive>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>Southern Plains</fullName>
                    <isActive>false</isActive>
                    <label>Southern Plains</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Challange_Answer__c</fullName>
        <description>This for IDM purpose to store wwid user Identity conformation. this field data will come from LDAP.</description>
        <label>Challange Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Challange_Question__c</fullName>
        <description>This field is for IDM purpose and to authorise the user and data for this field is from LDAP</description>
        <label>Challange Question</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>What is your Birth Place?</fullName>
                </value>
                <value>
                    <fullName>What is your Mothers Maiden Name?</fullName>
                </value>
                <value>
                    <fullName>What is your First School Name?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User in this field should be contact owner for all approval needs.</description>
        <label>User Details</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAM_Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reclaim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Contact_source__c</fullName>
        <label>Contact source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SwReg</fullName>
                </value>
                <value>
                    <fullName>OIM</fullName>
                </value>
                <value>
                    <fullName>QSOL Service Accounts</fullName>
                </value>
                <value>
                    <fullName>FCP</fullName>
                </value>
                <value>
                    <fullName>QSOL</fullName>
                </value>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>WEB</fullName>
                    <default>true</default>
                    <label>WEB</label>
                </value>
                <value>
                    <fullName>MoveX</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>Penske</fullName>
                </value>
                <value>
                    <fullName>Ryder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Cummins_BU__c</fullName>
        <label>Cummins BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BSCRP_CUST - Corporate</fullName>
                </value>
                <value>
                    <fullName>BSDBU_BU - Distribution Business</fullName>
                </value>
                <value>
                    <fullName>BSPGB_BU - Cummins Power Generation</fullName>
                </value>
                <value>
                    <fullName>BSCBS_CUST - Cummins Business Services</fullName>
                </value>
                <value>
                    <fullName>BSEBU_CUST - Engine Business</fullName>
                </value>
                <value>
                    <fullName>BSFBU_BU - Cummins Filtration</fullName>
                </value>
                <value>
                    <fullName>BSESB_BU - Cummins Emission Solutions</fullName>
                </value>
                <value>
                    <fullName>BSCTT_BU - Cummins Turbo Technologies</fullName>
                </value>
                <value>
                    <fullName>BSCMP_CNT - Components - Central Group</fullName>
                </value>
                <value>
                    <fullName>BSFSB_BU - Cummins Fuel Systems</fullName>
                </value>
                <value>
                    <fullName>BSECT_CUST - Eaton Cummins Transmissions</fullName>
                </value>
                <value>
                    <fullName>BSEPB_BU - Electrified Power Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Cummins_login_ID__c</fullName>
        <description>this is for IDM purpose and to store cummins LDAP ID of all the users having the WWID from LDAP</description>
        <externalId>true</externalId>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Customer_Number__c</fullName>
        <description>This field is use for High radius Application</description>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_DN_Value__c</fullName>
        <description>It stores DN Value of a user received from LDAP as well as for a Contact created in IAM</description>
        <label>DN Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Deactivation_Mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivation Mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Distributor_Name__c</fullName>
        <label>IAM Distributor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Ext_Legacy_Uid__c</fullName>
        <label>Ext Legacy Uid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IAM_Final_Approver__c</fullName>
        <description>this is to see if the contact is the final approver or not. this si important for Approval process</description>
        <label>Final Approver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_From_API__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to check if we need to invoke trigger for these Contacts or not. we need to set it to true if we do not ant to invoke trigger.</description>
        <label>From API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_From_JIT_Execution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for IAM Purpose and is used to know if Contact got created as apart of JIT implementation or not.</description>
        <label>From JIT Execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Inactivated_on__c</fullName>
        <description>This field is to know at what time user got inactivated</description>
        <label>Inactivated on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IAM_Individual_Company_Name__c</fullName>
        <label>Individual Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for IDM Purpose and is used to know if the user is internal or external</description>
        <label>Internal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_IsRSW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if contact has active RSW provisioning record</description>
        <label>IAM_IsRSW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Is_Merged_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Merged Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_LDAP_Manager__c</fullName>
        <label>LDAP Manager</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_LDAP_User_Type__c</fullName>
        <label>LDAP User Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Language__c</fullName>
        <description>This field is purely for IAM purpose to store the language that needs to be sent as a part of email .</description>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Legacy_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Location__c</fullName>
        <label>Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_NpbuDiagExpire__c</fullName>
        <description>It stores subscription and its expiration date format for subscribed and admin managed NPBU Diagnostics app.</description>
        <label>NPBU Diagnostics Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Partner_User_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partner User Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_PasswordChangedTime__c</fullName>
        <label>PasswordChangedTime</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Person_Type__c</fullName>
        <label>LDAP PersonType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>CWK</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Ex-employee</fullName>
                </value>
                <value>
                    <fullName>Joint Venture</fullName>
                </value>
                <value>
                    <fullName>Non-North America Distributor</fullName>
                </value>
                <value>
                    <fullName>Non-Person</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Previous_User_Email__c</fullName>
        <label>Previous User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IAM_Product_Group_Access__c</fullName>
        <description>this fields are used for IDM Purpose to update the user records</description>
        <label>Product Group Access</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Promotion__c</fullName>
        <externalId>true</externalId>
        <label>Service Training ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Provisions_To_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for data loading need to delet after data loading</description>
        <label>Provisions_To_Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Qsolexpiration__c</fullName>
        <label>QSOL Expiration</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Qsolview__c</fullName>
        <label>Qsolview</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Reason__c</fullName>
        <label>De-Activate Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Reject_Reason__c</fullName>
        <label>De-Activate Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Longer at Location</fullName>
                </value>
                <value>
                    <fullName>Requested Removal</fullName>
                </value>
                <value>
                    <fullName>Cancellation Comments</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Subscription Cancelled</fullName>
                </value>
                <value>
                    <fullName>Subscription Expired</fullName>
                </value>
                <value>
                    <fullName>Subscription Request Rejected</fullName>
                </value>
                <value>
                    <fullName>Subscription Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Remaining_Free_Count__c</fullName>
        <description>It displays only Remaining Count for all free Field Test Guidanz Mobile Count subscriptions.   Format - CalAssist-20|Intapp-20|IntappOEM-20</description>
        <label>Remaining Free Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Remaining_Paid_Count__c</fullName>
        <description>It displays only the Remaining Count for all paid Guidanz Mobile Count subscriptions.  Format - CalAssist-20|Intapp-20|IntappOEM-20</description>
        <label>Remaining Paid Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Send_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Site_Admin_Role__c</fullName>
        <label>Site Admin Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IAM_Site_Admin__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manage User</fullName>
                </value>
                <value>
                    <fullName>Manage Subscription</fullName>
                </value>
                <value>
                    <fullName>Manage Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Site_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Work_Group_Id__c</fullName>
        <label>Work Group Id</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_contact_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>contact check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_forgot_username__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAM_forgot_username</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_from_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>from Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_is_Member_of__c</fullName>
        <label>is Member of</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_swregexpire__c</fullName>
        <label>SW Reg Expiration</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_ready__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applicable for North America only</inlineHelpText>
        <label>Invoice Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lang_Pref_Code__c</fullName>
        <label>Lang Pref Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Preferences__c</fullName>
        <label>Language Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FSL_Comm_Language_Pref</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>This field is being added as part of wave initiative story number 9322</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OSM_Distributor_Admin_Last_Sel__c</fullName>
        <label>Distributor Admin Last select Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Distributor_Admin_Last_Sel_acc__c</fullName>
        <label>Dist last select account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTP_Code__c</fullName>
        <label>OTP Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RLS_Admin_Group_Email__c</fullName>
        <description>this field is for maintaing contact admin support emails for RLS</description>
        <label>RLS Admin Group Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RLS_Customer_Number__c</fullName>
        <description>this field is for maintaining RLS Customer Numbers on contact level</description>
        <label>RLS Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <formula>MobilePhone +&apos; &apos;+ Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Nightly_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Nightly Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Work_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Work Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_SMS_Notification_Frequency__c</fullName>
        <label>Text (SMS) Notification Frequency​</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Real-Time</fullName>
                    <default>true</default>
                    <label>Real-Time</label>
                </value>
                <value>
                    <fullName>Never/Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Troubleshooting_started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Troubleshooting Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Registered_for__c</fullName>
        <label>User Registered for</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>this is for IDM purpose and to store cummins LDAP ID of all the users having the WWID from LDAP</description>
        <externalId>true</externalId>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>